feat(foxtrends): Implement core agents and dashboard infrastructure
- Add CommunityInsightAgent for social community historical data analysis
- Add ContentAnalysisAgent for multimodal content analysis within communities
- Add TrendDiscoveryAgent for demand signal discovery and prioritization
- Implement NicheEngine with data models and LLM host integration
- Implement ForumEngine with monitoring and LLM coordination capabilities
- Implement ReportEngine with Flask interface for report generation
- Add Flask application (app.py) with dashboard routing and API endpoints
- Create HTML templates for dashboard, analysis views, and demand details
- Add comprehensive test suite including integration, property, and API tests
- Initialize SQLite database with schema for communities and demand signals
- Add environment configuration template (.env.example)
- Add quick start script and integration test runner
- Update project documentation and steering documents
- Refactor specification documents to remove TrendEngine and consolidate requirements
- Establish multi-agent architecture with ForumEngine coordination mechanism

--- a/FoxTrends/.env.example
+++ b/FoxTrends/.env.example
@@ -5,59 +5,62 @@ HOST=0.0.0.0
 PORT=5000
 
 # ====================== 数据库配置 ======================
-# 数据库类型：postgresql 或 mysql
-DB_DIALECT=postgresql
+# 数据库类型：sqlite（推荐，开箱即用）、postgresql 或 mysql
+DB_DIALECT=sqlite
+# SQLite 数据库文件路径（仅当 DB_DIALECT=sqlite 时使用）
+DB_NAME=foxtrends.db
+
+# PostgreSQL/MySQL 配置（可选，仅在使用 postgresql 或 mysql 时需要）
 # 数据库主机，例如 localhost 或 127.0.0.1
-DB_HOST=localhost
+# DB_HOST=localhost
 # 数据库端口号，PostgreSQL默认5432，MySQL默认3306
-DB_PORT=5432
+# DB_PORT=5432
 # 数据库用户名
-DB_USER=foxtrends_user
+# DB_USER=foxtrends_user
 # 数据库密码
-DB_PASSWORD=your_secure_password
-# 数据库名称
-DB_NAME=foxtrends
+# DB_PASSWORD=your_secure_password
 # 数据库字符集，推荐utf8mb4，兼容emoji
-DB_CHARSET=utf8mb4
+# DB_CHARSET=utf8mb4
 
 # ======================= LLM Agent 配置 =======================
 # 重要提醒：我们强烈推荐您先使用推荐的配置申请API，先跑通再进行您的更改！
 # 您可以更改每个Agent使用的LLM API，只要兼容OpenAI请求格式都可以
+# 推荐中转厂商申请地址：https://api.tu-zi.com/register?aff=lMbx
 
-# CommunityInsight Agent（推荐 kimi-k2，官方申请地址：https://platform.moonshot.cn/）
+# CommunityInsight Agent（推荐 kimi-k2）
 # 用于社区历史数据分析
 COMMUNITY_INSIGHT_API_KEY=
-COMMUNITY_INSIGHT_BASE_URL=https://api.moonshot.cn/v1
+COMMUNITY_INSIGHT_BASE_URL=
 COMMUNITY_INSIGHT_MODEL_NAME=kimi-k2-0711-preview
 
-# ContentAnalysis Agent（推荐 gemini-2.5-pro，中转厂商申请地址：https://aihubmix.com/?aff=8Ds9）
+# ContentAnalysis Agent（推荐 gemini-2.5-pro）
 # 用于社区内容多模态分析
 CONTENT_ANALYSIS_API_KEY=
-CONTENT_ANALYSIS_BASE_URL=https://aihubmix.com/v1
+CONTENT_ANALYSIS_BASE_URL=
 CONTENT_ANALYSIS_MODEL_NAME=gemini-2.5-pro
 
-# TrendDiscovery Agent（推荐 deepseek-chat，官方申请地址：https://platform.deepseek.com/）
+# TrendDiscovery Agent（推荐 deepseek）
 # 用于需求趋势发现
 TREND_DISCOVERY_API_KEY=
-TREND_DISCOVERY_BASE_URL=https://api.deepseek.com
-TREND_DISCOVERY_MODEL_NAME=deepseek-chat
+TREND_DISCOVERY_BASE_URL=
+TREND_DISCOVERY_MODEL_NAME=deepseek-ai/DeepSeek-V3.1
 
-# Report Agent（推荐 gemini-2.5-pro，中转厂商申请地址：https://aihubmix.com/?aff=8Ds9）
+# Report Agent（推荐 gemini-2.5-pro）
 # 用于生成需求分析报告
 REPORT_ENGINE_API_KEY=
-REPORT_ENGINE_BASE_URL=https://aihubmix.com/v1
+REPORT_ENGINE_BASE_URL=
 REPORT_ENGINE_MODEL_NAME=gemini-2.5-pro
 
-# NicheEngine Agent（推荐 deepseek-chat，官方申请地址：https://platform.deepseek.com/）
+# NicheEngine Agent（推荐 deepseek
 # 用于社区监控和需求信号提取
 NICHE_ENGINE_API_KEY=
-NICHE_ENGINE_BASE_URL=https://api.deepseek.com
-NICHE_ENGINE_MODEL_NAME=deepseek-chat
+NICHE_ENGINE_BASE_URL=
+NICHE_ENGINE_MODEL_NAME=deepseek-ai/DeepSeek-V3.1
 
-# Forum Host（推荐 qwen-plus，官方申请地址：https://www.aliyun.com/product/bailian）
+# Forum Host（推荐 qwen-plus）
 # 用于主持Agent讨论
 FORUM_HOST_API_KEY=
-FORUM_HOST_BASE_URL=
+FORUM_HOST_BASE_URL=https://api.tu-zi.com/v1
 FORUM_HOST_MODEL_NAME=
 
 # ================== 网络工具配置 ====================
